[package]
name = "logistic_robot"
version = "0.1.0"
authors = ["maymike321 <yamekim@comcast.net>"]
edition = "2018"

[dependencies]
fraction = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.10.9" }
async-trait = "0.1.51"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }